packages/preview/sprintf/0.1.0/.nim_runtime/tests/lexer/t25074.nim
discard """
  matrix: "--warningaserror:longliterals"
  errormsg: "number has 64 digits but type only supports 16 digits: '0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff' [LongLiterals]"
"""

echo $sizeof 0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff